--- a/Semestre 3/Matemáticas para el aprendizaje automático/Unidad 1/lab4.ipynb
+++ b/Semestre 3/Matemáticas para el aprendizaje automático/Unidad 1/lab4.ipynb
@@ -721,7 +721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mml_env",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -735,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
