--- a/Semestre 3/Matemáticas para el aprendizaje automático/Unidad 1/lab5.ipynb
+++ b/Semestre 3/Matemáticas para el aprendizaje automático/Unidad 1/lab5.ipynb
@@ -581,7 +581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mml_env",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -595,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
