--- a/Semestre 3/Matemáticas para el aprendizaje automático/Unidad 1/lab6.ipynb
+++ b/Semestre 3/Matemáticas para el aprendizaje automático/Unidad 1/lab6.ipynb
@@ -138,13 +138,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
